syntax = "proto3";

option csharp_namespace = "Discount.Grpc";
package Discount;


//Discount Service Defination
service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreatetDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CouponModel{
	int32 id = 1;
	string productName =2;
	string Description = 3;
	int32 Amount = 4;
}
message GetDiscountRequest{
	string productName = 1;
}
message CreateDiscountRequest{
	CouponModel coupon = 1;
}
message UpdateDiscountRequest{
	CouponModel coupon = 1;
}
message DeleteDiscountRequest{
	string produtName = 1;
}

message DeleteDiscountResponse{
	bool success = 1;
}